[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Minion/enemy/Bosses/Brood_Spider.gd" type="Script" id=1]
[ext_resource path="res://scenes/Minion/Healthbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Minion/Enemy/Equipment/spider_jaw.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Minion/Enemy/Equipment/Webcore.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0.140625, 1 )
metallic = 1.0
roughness = 0.0

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.854902, 1, 0, 1 )

[sub_resource type="BoxShape" id=5]

[sub_resource type="BoxShape" id=6]

[node name="Brood" type="KinematicBody" groups=[
"Enemy",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )
max_health = 500
speed = 10
weapon = ExtResource( 3 )
firebool = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="hitbox" type="Area" parent="."]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="hitbox"]
shape = SubResource( 5 )

[node name="root_zone" type="Area" parent="."]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, -2.57178 )
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="root_zone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.2, 0, 0, 0 )
shape = SubResource( 5 )

[node name="agro_zone" type="Area" parent="."]
transform = Transform( 10, 0, 0, 0, 0.5, 0, 0, 0, 10, 0, 0.515713, 0 )
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="agro_zone"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 6 )

[node name="PositionWeapon" type="Position3D" parent="."]
transform = Transform( 0.0589055, 0, -0.998264, 0.0352044, -0.999378, 0.00207734, -0.997642, -0.0352657, -0.0588689, 0.0153544, 0.210661, -2.23252 )

[node name="FirePos" type="Position3D" parent="PositionWeapon"]
transform = Transform( 0.91905, -0.389716, 0.0589057, -0.390394, -0.920648, 8.53948e-09, 0.0542314, -0.0229964, -0.998263, -4.49993, -2.02198, -0.25015 )

[node name="Healthbar" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.36354, 0 )

[node name="cooldown" type="Timer" parent="."]
wait_time = 11.05

[node name="can_runTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="StunTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.368371, -2.82821 )

[node name="Position3D2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.787516, 0, -3.87021 )

[node name="Position3D3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.847953, 0, -3.79985 )

[node name="fireTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="body_entered" from="root_zone" to="." method="_on_root_zone_body_entered"]
[connection signal="body_entered" from="agro_zone" to="." method="_on_agro_zone_body_entered"]
[connection signal="body_exited" from="agro_zone" to="." method="_on_agro_zone_body_exited"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="can_runTimer" to="." method="_on_can_runTimer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="fireTimer" to="." method="_on_fireTimer_timeout"]
